--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -30,6 +30,5 @@ jobs:
     - name: Build package
       run: python -m build
 
-    - name: Publish package
-      uses: ./.github/actions/build_and_publish_pypi
-
+    - name: Publish to PyPI.
+      uses: pypa/gh-action-pypi-publish@release/v1
